# mobile_customer_chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/: main.py
app/clients/: __init__.py
app/clients/toc/: __init__.py  client.py  state.py
app/clients/toc/prompts/: __init__.py  toc_generation.py
app/clients/toc/utils/: __init__.py  helper.py
app/core/: __init__.py
app/routers/: api.py
app/schemas/: api.py
configurations/: settings.py
tests/: conftest.py  test_clients.py  test_health.py
